accelerated-domains: add yuwen.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97460,6 +97460,7 @@ server=/yuweixian.com/114.114.114.114
 server=/yuweiyanwo.com/114.114.114.114
 server=/yuwell.com/114.114.114.114
 server=/yuwellgroup.com/114.114.114.114
+server=/yuwen.net/114.114.114.114
 server=/yuwen123.com/114.114.114.114
 server=/yuwen360.com/114.114.114.114
 server=/yuwenchaoshi.com/114.114.114.114
