--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46725,6 +46725,7 @@ server=/is02050qqp.xyz/114.114.114.114
 server=/is36.com/114.114.114.114
 server=/is404.com/114.114.114.114
 server=/is686.com/114.114.114.114
+server=/isa-hsse.com/114.114.114.114
 server=/isamanhua.com/114.114.114.114
 server=/isanxia.com/114.114.114.114
 server=/isay365.com/114.114.114.114
