accelerated-domains: add gastank-china.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33091,6 +33091,7 @@ server=/gasgoo.com/114.114.114.114
 server=/gashr.com/114.114.114.114
 server=/gaspeedup.com/114.114.114.114
 server=/gasshow.com/114.114.114.114
+server=/gastank-china.com/114.114.114.114
 server=/gastronomy.gov.mo/114.114.114.114
 server=/gasxf.com/114.114.114.114
 server=/gaszx.com/114.114.114.114
