accelerated-domains: add senge.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73220,6 +73220,7 @@ server=/sendpioneer.com/114.114.114.114
 server=/sends.cc/114.114.114.114
 server=/senenwood.com/114.114.114.114
 server=/senfa.net/114.114.114.114
+server=/senge.com/114.114.114.114
 server=/senggama.online/114.114.114.114
 server=/senguo.cc/114.114.114.114
 server=/senguo.com/114.114.114.114
