accelerated-domains: add 117915.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -1148,6 +1148,7 @@ server=/116daohang.com/114.114.114.114
 server=/116kj.com/114.114.114.114
 server=/116ya.com/114.114.114.114
 server=/116yx.com/114.114.114.114
+server=/117915.com/114.114.114.114
 server=/117y.com/114.114.114.114
 server=/118114.net/114.114.114.114
 server=/118360.com/114.114.114.114
