--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54879,6 +54879,7 @@ server=/lespetitsfiguiers.com/114.114.114.114
 server=/lesports.com/114.114.114.114
 server=/less-bug.com/114.114.114.114
 server=/less-more.net/114.114.114.114
+server=/lesso.com/114.114.114.114
 server=/lestcg.com/114.114.114.114
 server=/letabc.com/114.114.114.114
 server=/letang666.com/114.114.114.114
