--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50068,6 +50068,7 @@ server=/jooyoo.net/114.114.114.114
 server=/jooyuu.com/114.114.114.114
 server=/joozone.com/114.114.114.114
 server=/joqoo.com/114.114.114.114
+server=/josen.net/114.114.114.114
 server=/josephcz.xyz/114.114.114.114
 server=/joshreso.com/114.114.114.114
 server=/joshua317.com/114.114.114.114
