accelerated-domains: add trzhineng.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82175,6 +82175,7 @@ server=/trymoka.com/114.114.114.114
 server=/tryudesk.com/114.114.114.114
 server=/tryurbest.com/114.114.114.114
 server=/tryxue.com/114.114.114.114
+server=/trzhineng.com/114.114.114.114
 server=/ts-bus.com/114.114.114.114
 server=/ts-cooling.com/114.114.114.114
 server=/ts-jiabo.com/114.114.114.114
