--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70423,6 +70423,7 @@ server=/ranknowcn.com/114.114.114.114
 server=/ranliao.biz/114.114.114.114
 server=/ranling.com/114.114.114.114
 server=/ranqibiao.net/114.114.114.114
+server=/ranqiren.net/114.114.114.114
 server=/rantu.com/114.114.114.114
 server=/ranwen.org/114.114.114.114
 server=/ranwena.com/114.114.114.114
