--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31489,6 +31489,7 @@ server=/fke6.com/114.114.114.114
 server=/fkeduwxxcx.com/114.114.114.114
 server=/fkesfg.com/114.114.114.114
 server=/fkgou.com/114.114.114.114
+server=/fkguolu.com/114.114.114.114
 server=/fkhdview.com/114.114.114.114
 server=/fkhongdan.com/114.114.114.114
 server=/fklhb.com/114.114.114.114
