accelerated-domains: add syrqgas.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78595,6 +78595,7 @@ server=/syreads.com/114.114.114.114
 server=/syrecovery.com/114.114.114.114
 server=/syrhkj.com/114.114.114.114
 server=/syrkkxc.com/114.114.114.114
+server=/syrqgas.com/114.114.114.114
 server=/syrszs.com/114.114.114.114
 server=/syrzh.com/114.114.114.114
 server=/sys-ele.com/114.114.114.114
