accelerated-domains: add corerain.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22731,6 +22731,7 @@ server=/coreesports.net/114.114.114.114
 server=/corehalo.com/114.114.114.114
 server=/coreldrawchina.com/114.114.114.114
 server=/coremakingsolutions.com/114.114.114.114
+server=/corerain.com/114.114.114.114
 server=/corlercar888.com/114.114.114.114
 server=/corp-email.com/114.114.114.114
 server=/corp.cc/114.114.114.114
