--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73139,6 +73139,7 @@ server=/seekswan.com/114.114.114.114
 server=/seelvyou.com/114.114.114.114
 server=/seemmo.com/114.114.114.114
 server=/seemoread.com/114.114.114.114
+server=/seemse.com/114.114.114.114
 server=/seentao.com/114.114.114.114
 server=/seepomotor.com/114.114.114.114
 server=/seepomotor.net/114.114.114.114
