accelerated-domains: add qjcrcgas.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69021,6 +69021,7 @@ server=/qj26.com/114.114.114.114
 server=/qj9zn3qd2dj2ck00.app/114.114.114.114
 server=/qjbwgh.com/114.114.114.114
 server=/qjcode.com/114.114.114.114
+server=/qjcrcgas.com/114.114.114.114
 server=/qjcz.com/114.114.114.114
 server=/qjdchina.com/114.114.114.114
 server=/qjfy.com/114.114.114.114
