--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98448,6 +98448,7 @@ server=/zenithspace.net/114.114.114.114
 server=/zenixauto.com/114.114.114.114
 server=/zenlesszonezero.com/114.114.114.114
 server=/zenmen.com/114.114.114.114
+server=/zenner-metering.com/114.114.114.114
 server=/zenoven.com/114.114.114.114
 server=/zentao.net/114.114.114.114
 server=/zentaopm.com/114.114.114.114
