accelerated-domains: add rqb99.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71383,6 +71383,7 @@ server=/rpgmoba.com/114.114.114.114
 server=/rphbnm.com/114.114.114.114
 server=/rpo5156.com/114.114.114.114
 server=/rq.run/114.114.114.114
+server=/rqb99.com/114.114.114.114
 server=/rqjrb.com/114.114.114.114
 server=/rqjtp.com/114.114.114.114
 server=/rqkr.com/114.114.114.114
