--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67122,6 +67122,7 @@ server=/powerbeijing.com/114.114.114.114
 server=/powerbibbs.com/114.114.114.114
 server=/powercdn.com/114.114.114.114
 server=/powerchina-intl.com/114.114.114.114
+server=/powerchinashow.com/114.114.114.114
 server=/powerchinayun.com/114.114.114.114
 server=/powercx.com/114.114.114.114
 server=/powerde.com/114.114.114.114
