accelerated-domains: add gaspim.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33094,6 +33094,7 @@ server=/gasfw.com/114.114.114.114
 server=/gasgoo.com/114.114.114.114
 server=/gashr.com/114.114.114.114
 server=/gaspeedup.com/114.114.114.114
+server=/gaspim.com/114.114.114.114
 server=/gasshow.com/114.114.114.114
 server=/gastank-china.com/114.114.114.114
 server=/gastronomy.gov.mo/114.114.114.114
