--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57131,6 +57131,7 @@ server=/lujiya.com/114.114.114.114
 server=/lujun9972.win/114.114.114.114
 server=/lukachen.com/114.114.114.114
 server=/lukafei.com/114.114.114.114
+server=/lukechina.com/114.114.114.114
 server=/lukiwod.org/114.114.114.114
 server=/lukiya.com/114.114.114.114
 server=/lukou.com/114.114.114.114
