--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101446,6 +101446,7 @@ server=/ztcdata.com/114.114.114.114
 server=/ztcexam.com/114.114.114.114
 server=/ztch.ltd/114.114.114.114
 server=/ztcia.com/114.114.114.114
+server=/ztcjjt.com/114.114.114.114
 server=/ztcnwy.com/114.114.114.114
 server=/ztcpa.com/114.114.114.114
 server=/ztdli.com/114.114.114.114
