--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78412,6 +78412,7 @@ server=/sxrczx.com/114.114.114.114
 server=/sxrekord.com/114.114.114.114
 server=/sxri.net/114.114.114.114
 server=/sxrmxwk.com/114.114.114.114
+server=/sxrqrlxh.com/114.114.114.114
 server=/sxrszdh.com/114.114.114.114
 server=/sxrtv.com/114.114.114.114
 server=/sxsapi.com/114.114.114.114
