--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70138,6 +70138,7 @@ server=/qyhl.vip/114.114.114.114
 server=/qyhxths.com/114.114.114.114
 server=/qyhxy365.com/114.114.114.114
 server=/qyiliao.com/114.114.114.114
+server=/qyins.com/114.114.114.114
 server=/qyinter.com/114.114.114.114
 server=/qyjidianqi.com/114.114.114.114
 server=/qyjks.com/114.114.114.114
