--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48062,6 +48062,7 @@ server=/jgyun.net/114.114.114.114
 server=/jgzx.org/114.114.114.114
 server=/jgzyw.com/114.114.114.114
 server=/jh-dzcl.com/114.114.114.114
+server=/jh-sh.com/114.114.114.114
 server=/jh-uav.com/114.114.114.114
 server=/jh011.com/114.114.114.114
 server=/jh3737.com/114.114.114.114
