--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35431,6 +35431,7 @@ server=/gtsnzp.com/114.114.114.114
 server=/gttxidc.com/114.114.114.114
 server=/gtuanb.com/114.114.114.114
 server=/gtuu.com/114.114.114.114
+server=/gtx-mall.com/114.114.114.114
 server=/gtxf.com/114.114.114.114
 server=/gtxh.com/114.114.114.114
 server=/gtxp2.com/114.114.114.114
