--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16638,6 +16638,7 @@ server=/bwpx.com/114.114.114.114
 server=/bwsm.org/114.114.114.114
 server=/bwsoft.net/114.114.114.114
 server=/bwtdw.com/114.114.114.114
+server=/bwtlab.com/114.114.114.114
 server=/bwton.com/114.114.114.114
 server=/bwuqy594.com/114.114.114.114
 server=/bwvsc.com/114.114.114.114
