--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14797,6 +14797,7 @@ server=/biosune.com/114.114.114.114
 server=/biotanon.com/114.114.114.114
 server=/biotecan.com/114.114.114.114
 server=/biotech-meds.com/114.114.114.114
+server=/biotechwell.com/114.114.114.114
 server=/biothink.tech/114.114.114.114
 server=/biovector.net/114.114.114.114
 server=/biovip.com/114.114.114.114
