accelerated-domains: add medsuture.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58915,6 +58915,7 @@ server=/medrc.net/114.114.114.114
 server=/medreading.com/114.114.114.114
 server=/medscrm.com/114.114.114.114
 server=/medstarcorp.com/114.114.114.114
+server=/medsuture.com/114.114.114.114
 server=/medtion.com/114.114.114.114
 server=/medwant.com/114.114.114.114
 server=/meegobeta.com/114.114.114.114
