accelerated-domains: add pinggao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66597,6 +66597,7 @@ server=/pingdurc.com/114.114.114.114
 server=/pingevip.com/114.114.114.114
 server=/pingfangx.com/114.114.114.114
 server=/pingfenbang.com/114.114.114.114
+server=/pinggao.com/114.114.114.114
 server=/pinggaogroup.com/114.114.114.114
 server=/pinggu.com/114.114.114.114
 server=/pinggu.org/114.114.114.114
