--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71267,6 +71267,7 @@ server=/rongcheer.com/114.114.114.114
 server=/rongchenjx.com/114.114.114.114
 server=/rongdasoft.com/114.114.114.114
 server=/rongdatamall.com/114.114.114.114
+server=/rongded.com/114.114.114.114
 server=/rongdeji.com/114.114.114.114
 server=/rongdipipe.com/114.114.114.114
 server=/rongechain.com/114.114.114.114
