accelerated-domains: add spmcn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77107,6 +77107,7 @@ server=/splaybow.com/114.114.114.114
 server=/splayer.work/114.114.114.114
 server=/spldlkj.com/114.114.114.114
 server=/splmcn.com/114.114.114.114
+server=/spmcn.com/114.114.114.114
 server=/spnchinaren.com/114.114.114.114
 server=/spochikj.com/114.114.114.114
 server=/spoience.com/114.114.114.114
