--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46841,6 +46841,7 @@ server=/isocgw.net/114.114.114.114
 server=/isoftstone.com/114.114.114.114
 server=/isogx.com/114.114.114.114
 server=/isolves.com/114.114.114.114
+server=/isongcontrol.com/114.114.114.114
 server=/isoqh.com/114.114.114.114
 server=/isorange.com/114.114.114.114
 server=/isorenzheng.org/114.114.114.114
