--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75451,6 +75451,7 @@ server=/shzhanmeng.com/114.114.114.114
 server=/shzhiyingedu.com/114.114.114.114
 server=/shzhongru.com/114.114.114.114
 server=/shzhongxuan.com/114.114.114.114
+server=/shzhuran.com/114.114.114.114
 server=/shzhyx.com/114.114.114.114
 server=/shziyi.com/114.114.114.114
 server=/shzjy.com/114.114.114.114
