accelerated-domains: add qinghe-sh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68669,6 +68669,7 @@ server=/qinggl.com/114.114.114.114
 server=/qinggonggroup.com/114.114.114.114
 server=/qingguo.com/114.114.114.114
 server=/qinghaigames.com/114.114.114.114
+server=/qinghe-sh.com/114.114.114.114
 server=/qinghe.tv/114.114.114.114
 server=/qinghejing.com/114.114.114.114
 server=/qinghua.cc/114.114.114.114
