--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73713,6 +73713,7 @@ server=/shanghai-idea.com/114.114.114.114
 server=/shanghai-intex.com/114.114.114.114
 server=/shanghai-leather.com/114.114.114.114
 server=/shanghai-map.net/114.114.114.114
+server=/shanghai-pictures.com/114.114.114.114
 server=/shanghai-sports.com/114.114.114.114
 server=/shanghai369.com/114.114.114.114
 server=/shanghai4989.net/114.114.114.114
