--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76428,6 +76428,7 @@ server=/smttouch.com/114.114.114.114
 server=/smtukuzy.com/114.114.114.114
 server=/smtul.com/114.114.114.114
 server=/smtvip.com/114.114.114.114
+server=/smtw.com/114.114.114.114
 server=/smucdn.com/114.114.114.114
 server=/smudc.com/114.114.114.114
 server=/smuszh.com/114.114.114.114
