accelerated-domains: add teilei.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80174,6 +80174,7 @@ server=/tegongji.com/114.114.114.114
 server=/tegoushe.com/114.114.114.114
 server=/tehub.com/114.114.114.114
 server=/tehuituan.com/114.114.114.114
+server=/teilei.com/114.114.114.114
 server=/tejiabiao.com/114.114.114.114
 server=/tejiawang.com/114.114.114.114
 server=/tejiawang.work/114.114.114.114
