accelerated-domains: add 51bbcy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -4692,6 +4692,7 @@ server=/51banka.net/114.114.114.114
 server=/51baocan.com/114.114.114.114
 server=/51baoshui.com/114.114.114.114
 server=/51baoxiu.com/114.114.114.114
+server=/51bbcy.com/114.114.114.114
 server=/51bbmm.com/114.114.114.114
 server=/51bbo.com/114.114.114.114
 server=/51besttea.com/114.114.114.114
