accelerated-domains: add dahuasurvey.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24356,6 +24356,7 @@ server=/dahuagong.com/114.114.114.114
 server=/dahualan.com/114.114.114.114
 server=/dahuap2p.com/114.114.114.114
 server=/dahuap2pcloud.com/114.114.114.114
+server=/dahuasurvey.com/114.114.114.114
 server=/dahuatech.com/114.114.114.114
 server=/dahuawang.com/114.114.114.114
 server=/dahuhg.com/114.114.114.114
