--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53842,6 +53842,7 @@ server=/laishikouqiang.com/114.114.114.114
 server=/laishui.info/114.114.114.114
 server=/laisizuji.com/114.114.114.114
 server=/laisj.com/114.114.114.114
+server=/laitelaide.com/114.114.114.114
 server=/laituia.com/114.114.114.114
 server=/laituijian.net/114.114.114.114
 server=/laiwang.com/114.114.114.114
