accelerated-domains: add shanghai-test.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73718,6 +73718,7 @@ server=/shanghai-leather.com/114.114.114.114
 server=/shanghai-map.net/114.114.114.114
 server=/shanghai-pictures.com/114.114.114.114
 server=/shanghai-sports.com/114.114.114.114
+server=/shanghai-test.com/114.114.114.114
 server=/shanghai369.com/114.114.114.114
 server=/shanghai4989.net/114.114.114.114
 server=/shanghaiairport.com/114.114.114.114
