--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74736,6 +74736,7 @@ server=/shlixin.com/114.114.114.114
 server=/shlll.net/114.114.114.114
 server=/shlmth.com/114.114.114.114
 server=/shlongtai.com/114.114.114.114
+server=/shlp.com/114.114.114.114
 server=/shlpk.com/114.114.114.114
 server=/shlsnk.com/114.114.114.114
 server=/shlsyb.com/114.114.114.114
