--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94940,6 +94940,7 @@ server=/yinhu.com/114.114.114.114
 server=/yinhuadm.one/114.114.114.114
 server=/yini.org/114.114.114.114
 server=/yini8.com/114.114.114.114
+server=/yinjiabio.com/114.114.114.114
 server=/yinjispace.com/114.114.114.114
 server=/yinka.co/114.114.114.114
 server=/yinlingshuyuan.com/114.114.114.114
