--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22585,6 +22585,7 @@ server=/comwin-sh.com/114.114.114.114
 server=/con-star.com/114.114.114.114
 server=/con3c.com/114.114.114.114
 server=/conan06.com/114.114.114.114
+server=/conantoptical.com/114.114.114.114
 server=/conbagroup.com/114.114.114.114
 server=/conchdate.com/114.114.114.114
 server=/conchdesktop.com/114.114.114.114
