accelerated-domains: add miyateam.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60184,6 +60184,7 @@ server=/miyaboke.com/114.114.114.114
 server=/miyachat.com/114.114.114.114
 server=/miyanlife.com/114.114.114.114
 server=/miyapay.com/114.114.114.114
+server=/miyateam.com/114.114.114.114
 server=/miyatech.com/114.114.114.114
 server=/miyilink.com/114.114.114.114
 server=/miyoushe.com/114.114.114.114
