--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70498,6 +70498,7 @@ server=/rayps.com/114.114.114.114
 server=/rayrjx.com/114.114.114.114
 server=/rayseasc.com/114.114.114.114
 server=/raysilicon.com/114.114.114.114
+server=/raystesting.com/114.114.114.114
 server=/raysync.cloud/114.114.114.114
 server=/raythonsoft.com/114.114.114.114
 server=/raytoon.net/114.114.114.114
