--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24403,6 +24403,7 @@ server=/dailyqd.com/114.114.114.114
 server=/daimafans.com/114.114.114.114
 server=/daimami.com/114.114.114.114
 server=/daimawang.com/114.114.114.114
+server=/daimay.com/114.114.114.114
 server=/daimg.com/114.114.114.114
 server=/dainiter.com/114.114.114.114
 server=/dairao.net/114.114.114.114
