--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43434,6 +43434,7 @@ server=/huhua.net/114.114.114.114
 server=/huhuang.net/114.114.114.114
 server=/huhudi.com/114.114.114.114
 server=/huhuguanjia.com/114.114.114.114
+server=/huhui-sh.com/114.114.114.114
 server=/huhusddfnsuegcdn.com/114.114.114.114
 server=/huhustory.com/114.114.114.114
 server=/huhutian.com/114.114.114.114
