accelerated-domains: add iplcn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46580,6 +46580,7 @@ server=/iplay11g.com/114.114.114.114
 server=/iplay365.com/114.114.114.114
 server=/iplaypy.com/114.114.114.114
 server=/iplaysoft.com/114.114.114.114
+server=/iplcn.com/114.114.114.114
 server=/iplcnetwork.com/114.114.114.114
 server=/iplusmed.com/114.114.114.114
 server=/ipmay.com/114.114.114.114
