accelerated-domains: add shycqf.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75406,6 +75406,7 @@ server=/shyanke.com/114.114.114.114
 server=/shyanpu.com/114.114.114.114
 server=/shyaoxu.com/114.114.114.114
 server=/shyclouds.net/114.114.114.114
+server=/shycqf.com/114.114.114.114
 server=/shydjscl.com/114.114.114.114
 server=/shyestar.com/114.114.114.114
 server=/shyfci.com/114.114.114.114
