--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80286,6 +80286,7 @@ server=/tendcloud.com/114.114.114.114
 server=/tendcode.com/114.114.114.114
 server=/tenddata.com/114.114.114.114
 server=/tenddata.net/114.114.114.114
+server=/tendfo.com/114.114.114.114
 server=/tendis.net/114.114.114.114
 server=/tendrones.com/114.114.114.114
 server=/tendyron.com/114.114.114.114
