--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80746,6 +80746,7 @@ server=/tianhejiayi.com/114.114.114.114
 server=/tianhelife.com/114.114.114.114
 server=/tianheplaza.com/114.114.114.114
 server=/tianhetech.com/114.114.114.114
+server=/tianhongchina.com/114.114.114.114
 server=/tianhongdiaosu.com/114.114.114.114
 server=/tianhongsunshine.com/114.114.114.114
 server=/tianhujy.com/114.114.114.114
