--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72539,6 +72539,7 @@ server=/scgkw.net/114.114.114.114
 server=/scgra.com/114.114.114.114
 server=/scgxhq.com/114.114.114.114
 server=/sch-szu.com/114.114.114.114
+server=/schbrilliant.com/114.114.114.114
 server=/schdxww.com/114.114.114.114
 server=/schengle.com/114.114.114.114
 server=/schezi.com/114.114.114.114
