accelerated-domains: add sh-gsg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73538,6 +73538,7 @@ server=/sh-fy.com/114.114.114.114
 server=/sh-game.com/114.114.114.114
 server=/sh-gelanlishi.com/114.114.114.114
 server=/sh-gexing.com/114.114.114.114
+server=/sh-gsg.com/114.114.114.114
 server=/sh-hengyuan.com/114.114.114.114
 server=/sh-henian.com/114.114.114.114
 server=/sh-hilead.com/114.114.114.114
