accelerated-domains: add chinafeiting.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19758,6 +19758,7 @@ server=/chinafa.org/114.114.114.114
 server=/chinafarad.com/114.114.114.114
 server=/chinafashionbao.com/114.114.114.114
 server=/chinafbdq.com/114.114.114.114
+server=/chinafeiting.com/114.114.114.114
 server=/chinafert-gov.com/114.114.114.114
 server=/chinaffmpeg.com/114.114.114.114
 server=/chinafga.org/114.114.114.114
