accelerated-domains: add hondugroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42059,6 +42059,7 @@ server=/homylogistics.com/114.114.114.114
 server=/homyu.com/114.114.114.114
 server=/honco88.com/114.114.114.114
 server=/honda-sundiro.com/114.114.114.114
+server=/hondugroup.com/114.114.114.114
 server=/honestread.com/114.114.114.114
 server=/honesty-environ.com/114.114.114.114
 server=/honf.net/114.114.114.114
