--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55585,6 +55585,7 @@ server=/lingfengyun.com/114.114.114.114
 server=/lingganjia.com/114.114.114.114
 server=/linghit.com/114.114.114.114
 server=/linghitai.com/114.114.114.114
+server=/linghua-logistics.com/114.114.114.114
 server=/linghuidzsw.com/114.114.114.114
 server=/lingji666.com/114.114.114.114
 server=/lingjiaocheng.com/114.114.114.114
