accelerated-domains: add sh-rfid.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73576,6 +73576,7 @@ server=/sh-prosperity.com/114.114.114.114
 server=/sh-prosun.com/114.114.114.114
 server=/sh-putai.com/114.114.114.114
 server=/sh-real.com/114.114.114.114
+server=/sh-rfid.com/114.114.114.114
 server=/sh-ryjx.com/114.114.114.114
 server=/sh-service.com/114.114.114.114
 server=/sh-sfc.com/114.114.114.114
