--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73583,6 +73583,7 @@ server=/sh-sfc.com/114.114.114.114
 server=/sh-shenming.com/114.114.114.114
 server=/sh-shenou.com/114.114.114.114
 server=/sh-shuguang.com/114.114.114.114
+server=/sh-sict.com/114.114.114.114
 server=/sh-smartstate.com/114.114.114.114
 server=/sh-srcb.com/114.114.114.114
 server=/sh-ssci.com/114.114.114.114
