accelerated-domains: add shalfoil.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73650,6 +73650,7 @@ server=/shajdog.com/114.114.114.114
 server=/shajuta.com/114.114.114.114
 server=/shakingcloud.com/114.114.114.114
 server=/shalashike.com/114.114.114.114
+server=/shalfoil.com/114.114.114.114
 server=/shall-buy.com/114.114.114.114
 server=/shallserve.cc/114.114.114.114
 server=/shami99.com/114.114.114.114
