accelerated-domains: add shhugong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74424,6 +74424,7 @@ server=/shhs-tw.com/114.114.114.114
 server=/shhtqn.com/114.114.114.114
 server=/shhuaerkang.com/114.114.114.114
 server=/shhuayi.com/114.114.114.114
+server=/shhugong.com/114.114.114.114
 server=/shhuihai.com/114.114.114.114
 server=/shhuke.com/114.114.114.114
 server=/shhushi.com/114.114.114.114
