accelerated-domains: add shwuji.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75379,6 +75379,7 @@ server=/shws.org/114.114.114.114
 server=/shwsg.net/114.114.114.114
 server=/shwszdh.com/114.114.114.114
 server=/shwtqx.com/114.114.114.114
+server=/shwuji.com/114.114.114.114
 server=/shwx.com/114.114.114.114
 server=/shwxtw.com/114.114.114.114
 server=/shwyky.net/114.114.114.114
