accelerated-domains: add sunglow-tec.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77929,6 +77929,7 @@ server=/sungent.com/114.114.114.114
 server=/sungesoft.com/114.114.114.114
 server=/sungine.com/114.114.114.114
 server=/sunglassesandgoggles.com/114.114.114.114
+server=/sunglow-tec.com/114.114.114.114
 server=/sungoal.org/114.114.114.114
 server=/sungoedu.com/114.114.114.114
 server=/sungshu.com/114.114.114.114
