accelerated-domains: add ycphkj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93971,6 +93971,7 @@ server=/ycool.com/114.114.114.114
 server=/ycpack.net/114.114.114.114
 server=/ycpai.com/114.114.114.114
 server=/ycpec.com/114.114.114.114
+server=/ycphkj.com/114.114.114.114
 server=/ycpsy.com/114.114.114.114
 server=/ycq.cab/114.114.114.114
 server=/ycqin.com/114.114.114.114
