accelerated-domains: add keey.sh

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52128,6 +52128,7 @@ server=/keerqinmuseum.com/114.114.114.114
 server=/keerworld.com/114.114.114.114
 server=/keetalks.com/114.114.114.114
 server=/keewin.com/114.114.114.114
+server=/keey.sh/114.114.114.114
 server=/kefeijn.com/114.114.114.114
 server=/kefenxi.com/114.114.114.114
 server=/kefusoft.com/114.114.114.114
