accelerated-domains: add tongjijs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81618,6 +81618,7 @@ server=/tongji.info/114.114.114.114
 server=/tongji.net/114.114.114.114
 server=/tongjia.com/114.114.114.114
 server=/tongjiai.com/114.114.114.114
+server=/tongjijs.com/114.114.114.114
 server=/tongjiniao.com/114.114.114.114
 server=/tongjipf.com/114.114.114.114
 server=/tongleer.com/114.114.114.114
