accelerated-domains: add sunemc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77919,6 +77919,7 @@ server=/sundray.com/114.114.114.114
 server=/sundxs.com/114.114.114.114
 server=/sunear.net/114.114.114.114
 server=/sunease.net/114.114.114.114
+server=/sunemc.com/114.114.114.114
 server=/suner.cc/114.114.114.114
 server=/sunergyworks.com/114.114.114.114
 server=/sunfounder.cc/114.114.114.114
