accelerated-domains: add ubesh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83184,6 +83184,7 @@ server=/ubc-bearing.com/114.114.114.114
 server=/ubeethiesemo.com/114.114.114.114
 server=/ubeihai.com/114.114.114.114
 server=/ubersz.com/114.114.114.114
+server=/ubesh.com/114.114.114.114
 server=/ubestkid.com/114.114.114.114
 server=/ubetween.com/114.114.114.114
 server=/ubgame.com/114.114.114.114
