--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9280,6 +9280,7 @@ server=/acloudrender.com/114.114.114.114
 server=/acmcoder.com/114.114.114.114
 server=/acmec-e.com/114.114.114.114
 server=/acmemob.com/114.114.114.114
+server=/acmetranslation.com/114.114.114.114
 server=/acmicpc.info/114.114.114.114
 server=/acmoba.com/114.114.114.114
 server=/acmsearch.com/114.114.114.114
