--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14987,6 +14987,7 @@ server=/biznewscn.com/114.114.114.114
 server=/bizopsmall.com/114.114.114.114
 server=/bizpai.com/114.114.114.114
 server=/bizrotator.com/114.114.114.114
+server=/bizsmooth.com/114.114.114.114
 server=/bizsn.com/114.114.114.114
 server=/bizsofts.com/114.114.114.114
 server=/bizvane.com/114.114.114.114
