accelerated-domains: add elingyun.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29122,6 +29122,7 @@ server=/elichtmedia.com/114.114.114.114
 server=/elikeme.com/114.114.114.114
 server=/elikeme.net/114.114.114.114
 server=/eling.me/114.114.114.114
+server=/elingyun.com/114.114.114.114
 server=/elitecrm.com/114.114.114.114
 server=/eliwang.com/114.114.114.114
 server=/elkpi.com/114.114.114.114
