accelerated-domains: add generalfushi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33602,6 +33602,7 @@ server=/gendan5.com/114.114.114.114
 server=/gendantong.com/114.114.114.114
 server=/genelinkout.com/114.114.114.114
 server=/genepharma.com/114.114.114.114
+server=/generalfushi.com/114.114.114.114
 server=/generalichina.com/114.114.114.114
 server=/generalwatertech.com/114.114.114.114
 server=/genericfixer.com/114.114.114.114
