--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47980,6 +47980,7 @@ server=/jesselauristonlivermore.com/114.114.114.114
 server=/jesselivermore.com/114.114.114.114
 server=/jestq.com/114.114.114.114
 server=/jet-ok.com/114.114.114.114
+server=/jetechtool.com/114.114.114.114
 server=/jethoo.com/114.114.114.114
 server=/jethro.fun/114.114.114.114
 server=/jetionservice.com/114.114.114.114
