--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53487,6 +53487,7 @@ server=/kunpengtn.com/114.114.114.114
 server=/kunpo.cc/114.114.114.114
 server=/kunst-x.com/114.114.114.114
 server=/kuntaihotel.com/114.114.114.114
+server=/kunyamedical.com/114.114.114.114
 server=/kuo-yi.com/114.114.114.114
 server=/kuobuy.com/114.114.114.114
 server=/kuocaicdn.com/114.114.114.114
