accelerated-domains: add kzcpm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53727,6 +53727,7 @@ server=/kyzs.com/114.114.114.114
 server=/kyzyj.com/114.114.114.114
 server=/kz.cc/114.114.114.114
 server=/kz8yx.com/114.114.114.114
+server=/kzcpm.com/114.114.114.114
 server=/kzgry.com/114.114.114.114
 server=/kzgui.com/114.114.114.114
 server=/kzjtv.com/114.114.114.114
