--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57502,6 +57502,7 @@ server=/lxf.me/114.114.114.114
 server=/lxg2016.com/114.114.114.114
 server=/lxgcf.com/114.114.114.114
 server=/lxhkair.com/114.114.114.114
+server=/lxhro.com/114.114.114.114
 server=/lxhuwai.com/114.114.114.114
 server=/lxhuwai.net/114.114.114.114
 server=/lxi.me/114.114.114.114
