--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67403,6 +67403,7 @@ server=/proyy.com/114.114.114.114
 server=/prpracg.com/114.114.114.114
 server=/prs-9hospital.com/114.114.114.114
 server=/prsgl.com/114.114.114.114
+server=/prteco.com/114.114.114.114
 server=/prts.wiki/114.114.114.114
 server=/prttech.com/114.114.114.114
 server=/prxxff.com/114.114.114.114
