accelerated-domains: add sunyitech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78050,6 +78050,7 @@ server=/sunyansong.com/114.114.114.114
 server=/sunyard.com/114.114.114.114
 server=/sunyea.com/114.114.114.114
 server=/sunyet.com/114.114.114.114
+server=/sunyitech.com/114.114.114.114
 server=/sunyoads.com/114.114.114.114
 server=/sunyongfeng.com/114.114.114.114
 server=/sunywo.com/114.114.114.114
