accelerated-domains: add vimdesign.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84598,6 +84598,7 @@ server=/vimage1.com/114.114.114.114
 server=/vimage2.com/114.114.114.114
 server=/vimage3.com/114.114.114.114
 server=/vimage4.com/114.114.114.114
+server=/vimdesign.com/114.114.114.114
 server=/vimge.com/114.114.114.114
 server=/vimicro.com/114.114.114.114
 server=/vimiix.com/114.114.114.114
