--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20072,6 +20072,7 @@ server=/chinasigma.com/114.114.114.114
 server=/chinasilk.com/114.114.114.114
 server=/chinasilkmuseum.com/114.114.114.114
 server=/chinasiwei.com/114.114.114.114
+server=/chinaslc.com/114.114.114.114
 server=/chinasmartpay.com/114.114.114.114
 server=/chinasmcc.com/114.114.114.114
 server=/chinasmp.com/114.114.114.114
