--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26040,6 +26040,7 @@ server=/digitalcq.com/114.114.114.114
 server=/digitaldrew.net/114.114.114.114
 server=/digitaling.com/114.114.114.114
 server=/digitaljx.com/114.114.114.114
+server=/digitalmanu.com/114.114.114.114
 server=/digitalvolvo.com/114.114.114.114
 server=/digitalwuhan.com/114.114.114.114
 server=/digitalwuhan.net/114.114.114.114
