accelerated-domains: add shtianye.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75058,6 +75058,7 @@ server=/shtgds.com/114.114.114.114
 server=/shthbanz.com/114.114.114.114
 server=/shthediyya.com/114.114.114.114
 server=/shtianhe.cc/114.114.114.114
+server=/shtianye.com/114.114.114.114
 server=/shtianyuqiche.com/114.114.114.114
 server=/shtic.com/114.114.114.114
 server=/shtimessquare.com/114.114.114.114
