--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75740,6 +75740,7 @@ server=/singularity-ai.com/114.114.114.114
 server=/singularmedical.net/114.114.114.114
 server=/singworld.net/114.114.114.114
 server=/singzsing.com/114.114.114.114
+server=/sinitek.com/114.114.114.114
 server=/sinldo.com/114.114.114.114
 server=/sinlu.net/114.114.114.114
 server=/sinmeng.com/114.114.114.114
