--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33016,6 +33016,7 @@ server=/gaoguai.com/114.114.114.114
 server=/gaogulou.com/114.114.114.114
 server=/gaohaipeng.com/114.114.114.114
 server=/gaohangip.com/114.114.114.114
+server=/gaoheconsult.com/114.114.114.114
 server=/gaohr.com/114.114.114.114
 server=/gaoimg.com/114.114.114.114
 server=/gaoji.ren/114.114.114.114
