accelerated-domains: add daqiguanli.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24707,6 +24707,7 @@ server=/dappdiscover.com/114.114.114.114
 server=/dapustor.com/114.114.114.114
 server=/daqi.com/114.114.114.114
 server=/daqiao.host/114.114.114.114
+server=/daqiguanli.com/114.114.114.114
 server=/daqihui.com/114.114.114.114
 server=/daqing8080.com/114.114.114.114
 server=/daqiso.com/114.114.114.114
