--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26890,6 +26890,7 @@ server=/donghaidl.com/114.114.114.114
 server=/donghaifunds.com/114.114.114.114
 server=/donghailighter.com/114.114.114.114
 server=/donghao.org/114.114.114.114
+server=/donghaotest.com/114.114.114.114
 server=/donghongzx.com/114.114.114.114
 server=/donghuangshanquan.com/114.114.114.114
 server=/donghui.tech/114.114.114.114
