--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32402,6 +32402,7 @@ server=/futufin.com/114.114.114.114
 server=/futuhn.com/114.114.114.114
 server=/futuniuniu.com/114.114.114.114
 server=/futunn.com/114.114.114.114
+server=/future-sh.com/114.114.114.114
 server=/futureengineer.org/114.114.114.114
 server=/futureprize.org/114.114.114.114
 server=/futurescircle.com/114.114.114.114
