accelerated-domains: add hile-bio.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41189,6 +41189,7 @@ server=/hikvisionauto.com/114.114.114.114
 server=/hikyun.com/114.114.114.114
 server=/hilantu.com/114.114.114.114
 server=/hilbcd.com/114.114.114.114
+server=/hile-bio.com/114.114.114.114
 server=/hilemic.com/114.114.114.114
 server=/hilfv.com/114.114.114.114
 server=/hiliad.com/114.114.114.114
