accelerated-domains: add seagull-digital.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73074,6 +73074,7 @@ server=/seacatcry.com/114.114.114.114
 server=/seacxy.com/114.114.114.114
 server=/seaflame.xyz/114.114.114.114
 server=/seafrom.com/114.114.114.114
+server=/seagull-digital.com/114.114.114.114
 server=/seagulllocker.com/114.114.114.114
 server=/seagullwatch.com/114.114.114.114
 server=/seagullwatches.com/114.114.114.114
