--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73767,6 +73767,7 @@ server=/shanghaicup.com/114.114.114.114
 server=/shanghaidaily.com/114.114.114.114
 server=/shanghaidelong.com/114.114.114.114
 server=/shanghaidisneyresort.com/114.114.114.114
+server=/shanghaidite.com/114.114.114.114
 server=/shanghaifz.com/114.114.114.114
 server=/shanghaigobroadhospital.com/114.114.114.114
 server=/shanghaihino.com/114.114.114.114
