--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74062,6 +74062,7 @@ server=/shccineg.com/114.114.114.114
 server=/shccio.com/114.114.114.114
 server=/shccpx.net/114.114.114.114
 server=/shccxy.com/114.114.114.114
+server=/shcd.cc/114.114.114.114
 server=/shcell.org/114.114.114.114
 server=/shcfcd.com/114.114.114.114
 server=/shchengkao.com/114.114.114.114
