accelerated-domains: add shgbit.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74409,6 +74409,7 @@ server=/shfxrc.com/114.114.114.114
 server=/shfy2020.com/114.114.114.114
 server=/shgao.com/114.114.114.114
 server=/shgaoxin.net/114.114.114.114
+server=/shgbit.com/114.114.114.114
 server=/shgbitcloud.com/114.114.114.114
 server=/shgci.com/114.114.114.114
 server=/shgjj.com/114.114.114.114
