accelerated-domains: add voneseals.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85027,6 +85027,7 @@ server=/voltmemo.com/114.114.114.114
 server=/vomicer.com/114.114.114.114
 server=/voming.com/114.114.114.114
 server=/vommatec.com/114.114.114.114
+server=/voneseals.com/114.114.114.114
 server=/vonets.com/114.114.114.114
 server=/vonng.com/114.114.114.114
 server=/vonwei.com/114.114.114.114
