--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94751,6 +94751,7 @@ server=/yijueweb.com/114.114.114.114
 server=/yijukemao.com/114.114.114.114
 server=/yijun77.com/114.114.114.114
 server=/yikag.com/114.114.114.114
+server=/yikai.com/114.114.114.114
 server=/yikaiye.com/114.114.114.114
 server=/yikang1977.com/114.114.114.114
 server=/yikangdongf.com/114.114.114.114
