accelerated-domains: add think-way.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80648,6 +80648,7 @@ server=/thingclub.com/114.114.114.114
 server=/thingjs.com/114.114.114.114
 server=/thingskit.com/114.114.114.114
 server=/think-mall.com/114.114.114.114
+server=/think-way.net/114.114.114.114
 server=/thinkcloudlab.com/114.114.114.114
 server=/thinkcmf.com/114.114.114.114
 server=/thinkdid.com/114.114.114.114
