--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94381,6 +94381,7 @@ server=/yfwpt.vip/114.114.114.114
 server=/yfycrc.com/114.114.114.114
 server=/yfycyboil.com/114.114.114.114
 server=/yfygxyy.com/114.114.114.114
+server=/yg-st.com/114.114.114.114
 server=/yg1997.com/114.114.114.114
 server=/yg84.com/114.114.114.114
 server=/ygbid.com/114.114.114.114
