accelerated-domains: add minqiao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60077,6 +60077,7 @@ server=/minlida.com/114.114.114.114
 server=/minor-tech.com/114.114.114.114
 server=/minovapharma.com/114.114.114.114
 server=/minpayment.com/114.114.114.114
+server=/minqiao.com/114.114.114.114
 server=/minra.com/114.114.114.114
 server=/minrank.com/114.114.114.114
 server=/minretail.com/114.114.114.114
