--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73549,6 +73549,7 @@ server=/sh-arpm.com/114.114.114.114
 server=/sh-autofair.com/114.114.114.114
 server=/sh-azjiadeli.com/114.114.114.114
 server=/sh-baolai.com/114.114.114.114
+server=/sh-chenghuan.com/114.114.114.114
 server=/sh-chimbusco.com/114.114.114.114
 server=/sh-datastone.com/114.114.114.114
 server=/sh-deem.com/114.114.114.114
