accelerated-domains: add scs-jianyu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72694,6 +72694,7 @@ server=/scrqw.com/114.114.114.114
 server=/scrsw.net/114.114.114.114
 server=/scrsy.net/114.114.114.114
 server=/scrumcn.com/114.114.114.114
+server=/scs-jianyu.com/114.114.114.114
 server=/scscms.com/114.114.114.114
 server=/scsddyf.com/114.114.114.114
 server=/scsdzxh.org/114.114.114.114
