--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74095,6 +74095,7 @@ server=/shdancecenter.com/114.114.114.114
 server=/shdata.com/114.114.114.114
 server=/shdatagroup.com/114.114.114.114
 server=/shdcjt.com/114.114.114.114
+server=/shdftz.com/114.114.114.114
 server=/shdingzhidental.com/114.114.114.114
 server=/shdirong.com/114.114.114.114
 server=/shdjt.com/114.114.114.114
