accelerated-domains: add shhuazhen.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74454,6 +74454,7 @@ server=/shhs-tw.com/114.114.114.114
 server=/shhtqn.com/114.114.114.114
 server=/shhuaerkang.com/114.114.114.114
 server=/shhuayi.com/114.114.114.114
+server=/shhuazhen.com/114.114.114.114
 server=/shhugong.com/114.114.114.114
 server=/shhuihai.com/114.114.114.114
 server=/shhuke.com/114.114.114.114
