accelerated-domains: add shscsc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75025,6 +75025,7 @@ server=/shsby.com/114.114.114.114
 server=/shsc-valve.com/114.114.114.114
 server=/shscce.com/114.114.114.114
 server=/shsci.org/114.114.114.114
+server=/shscsc.com/114.114.114.114
 server=/shsctec.com/114.114.114.114
 server=/shsdjsj.com/114.114.114.114
 server=/shsee.com/114.114.114.114
