accelerated-domains: add vatech-china.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84313,6 +84313,7 @@ server=/vastlandsc.com/114.114.114.114
 server=/vastsea.com/114.114.114.114
 server=/vastteq.com/114.114.114.114
 server=/vatdydw.com/114.114.114.114
+server=/vatech-china.com/114.114.114.114
 server=/vattenvalve.com/114.114.114.114
 server=/vauoo.com/114.114.114.114
 server=/vautoshow.com/114.114.114.114
