accelerated-domains: add anguilasia.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11123,6 +11123,7 @@ server=/angogotech.net/114.114.114.114
 server=/angrymailer.com/114.114.114.114
 server=/angrymiao.com/114.114.114.114
 server=/angui.org/114.114.114.114
+server=/anguilasia.com/114.114.114.114
 server=/anguomob.com/114.114.114.114
 server=/angustar.com/114.114.114.114
 server=/angwei.net/114.114.114.114
