accelerated-domains: add bestone.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14193,6 +14193,7 @@ server=/besticity.com/114.114.114.114
 server=/bestjy.net/114.114.114.114
 server=/bestlee.net/114.114.114.114
 server=/bestlosslessmusic.com/114.114.114.114
+server=/bestone.com/114.114.114.114
 server=/bestone.vip/114.114.114.114
 server=/bestpay.net/114.114.114.114
 server=/bestpeng.com/114.114.114.114
