--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14694,6 +14694,7 @@ server=/billionconnect.com/114.114.114.114
 server=/billionfocus.com/114.114.114.114
 server=/billionseo.com/114.114.114.114
 server=/billowlink.com/114.114.114.114
+server=/billu.cc/114.114.114.114
 server=/billwang.net/114.114.114.114
 server=/bilnn.com/114.114.114.114
 server=/bim-times.com/114.114.114.114
