accelerated-domains: add china-pinyuan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19506,6 +19506,7 @@ server=/china-packcon.com/114.114.114.114
 server=/china-pcba.com/114.114.114.114
 server=/china-pengye.com/114.114.114.114
 server=/china-pharmacy.com/114.114.114.114
+server=/china-pinyuan.com/114.114.114.114
 server=/china-planet.com/114.114.114.114
 server=/china-pub.com/114.114.114.114
 server=/china-qiao.com/114.114.114.114
