accelerated-domains: add kbans.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52007,6 +52007,7 @@ server=/kazhifu.com/114.114.114.114
 server=/kazithai.com/114.114.114.114
 server=/kb.com/114.114.114.114
 server=/kb9.com/114.114.114.114
+server=/kbans.com/114.114.114.114
 server=/kbao123.com/114.114.114.114
 server=/kbccvwz.com/114.114.114.114
 server=/kbcdn.com/114.114.114.114
