accelerated-domains: add evpowergroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29843,6 +29843,7 @@ server=/evoc.com/114.114.114.114
 server=/evocqd.com/114.114.114.114
 server=/evotrue.com/114.114.114.114
 server=/evpartner.com/114.114.114.114
+server=/evpowergroup.com/114.114.114.114
 server=/evqvxuq.com/114.114.114.114
 server=/evv1.com/114.114.114.114
 server=/evyy.net/114.114.114.114
