--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52548,6 +52548,7 @@ server=/kiswo.com/114.114.114.114
 server=/kit-lee.me/114.114.114.114
 server=/kitic.net/114.114.114.114
 server=/kitiu.com/114.114.114.114
+server=/kitontech.com/114.114.114.114
 server=/kitstown.com/114.114.114.114
 server=/kituin.fun/114.114.114.114
 server=/kivend.net/114.114.114.114
