--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75787,6 +75787,7 @@ server=/sino-rainbow.cc/114.114.114.114
 server=/sino-sfcc.com/114.114.114.114
 server=/sino-tcm.com/114.114.114.114
 server=/sino-web.net/114.114.114.114
+server=/sinoagentsh.com/114.114.114.114
 server=/sinoancher.com/114.114.114.114
 server=/sinoaquafilter.com/114.114.114.114
 server=/sinoassistance.com/114.114.114.114
