accelerated-domains: add ikncn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45795,6 +45795,7 @@ server=/ikjxc.com/114.114.114.114
 server=/ikjzd.com/114.114.114.114
 server=/ikmoo.com/114.114.114.114
 server=/ikmt.net/114.114.114.114
+server=/ikncn.com/114.114.114.114
 server=/iknow1314.com/114.114.114.114
 server=/ikonfx.com/114.114.114.114
 server=/ikongjian.com/114.114.114.114
