--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57293,6 +57293,7 @@ server=/lurenshuwx.com/114.114.114.114
 server=/lurun68.com/114.114.114.114
 server=/lusen.com/114.114.114.114
 server=/luseng.cc/114.114.114.114
+server=/lush-mount.com/114.114.114.114
 server=/lushancn.com/114.114.114.114
 server=/lushaojun.com/114.114.114.114
 server=/lushifu.net/114.114.114.114
