accelerated-domains: add nakong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61897,6 +61897,7 @@ server=/naiyouxuexi.com/114.114.114.114
 server=/najyj.net/114.114.114.114
 server=/nakedsail.com/114.114.114.114
 server=/nakevip.com/114.114.114.114
+server=/nakong.com/114.114.114.114
 server=/nalanchuanmei.com/114.114.114.114
 server=/nalanxi.com/114.114.114.114
 server=/nalichi.com/114.114.114.114
