--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62489,6 +62489,7 @@ server=/new669.com/114.114.114.114
 server=/newacademic.net/114.114.114.114
 server=/newaigou.com/114.114.114.114
 server=/newaircloud.com/114.114.114.114
+server=/newamigo.net/114.114.114.114
 server=/newansha.com/114.114.114.114
 server=/newapi.com/114.114.114.114
 server=/newasp.com/114.114.114.114
