--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73607,6 +73607,7 @@ server=/sh-livemusic.com/114.114.114.114
 server=/sh-minghui.com/114.114.114.114
 server=/sh-ncn.com/114.114.114.114
 server=/sh-nemoto.com/114.114.114.114
+server=/sh-oca.com/114.114.114.114
 server=/sh-pp.com/114.114.114.114
 server=/sh-printing.com/114.114.114.114
 server=/sh-prosperity.com/114.114.114.114
