accelerated-domains: add shdasa.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74104,6 +74104,7 @@ server=/shcz.com/114.114.114.114
 server=/shczssyq.com/114.114.114.114
 server=/shczyy.com/114.114.114.114
 server=/shdancecenter.com/114.114.114.114
+server=/shdasa.com/114.114.114.114
 server=/shdata.com/114.114.114.114
 server=/shdatagroup.com/114.114.114.114
 server=/shdcjt.com/114.114.114.114
