accelerated-domains: add shsgbm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75043,6 +75043,7 @@ server=/shsctec.com/114.114.114.114
 server=/shsdjsj.com/114.114.114.114
 server=/shsee.com/114.114.114.114
 server=/shsfkyy.com/114.114.114.114
+server=/shsgbm.com/114.114.114.114
 server=/shsgyq.com/114.114.114.114
 server=/shshaoduo.com/114.114.114.114
 server=/shshenbo.com/114.114.114.114
