--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89633,6 +89633,7 @@ server=/xdggd.com/114.114.114.114
 server=/xdglt.com/114.114.114.114
 server=/xdgogogo.com/114.114.114.114
 server=/xdhcn.com/114.114.114.114
+server=/xdhelp.com/114.114.114.114
 server=/xdhyty.com/114.114.114.114
 server=/xdiarys.com/114.114.114.114
 server=/xdingerp.com/114.114.114.114
