--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14798,6 +14798,7 @@ server=/bioon.com/114.114.114.114
 server=/bioon.net/114.114.114.114
 server=/bioscienceres.com/114.114.114.114
 server=/bioshineking.com/114.114.114.114
+server=/biosmelt.com/114.114.114.114
 server=/biosrepair.com/114.114.114.114
 server=/biostatistic.net/114.114.114.114
 server=/biosune.com/114.114.114.114
