accelerated-domains: add zhpharm-sh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100048,6 +100048,7 @@ server=/zhouyuanchao.com/114.114.114.114
 server=/zhouzhuang.net/114.114.114.114
 server=/zhowe.net/114.114.114.114
 server=/zhoz.com/114.114.114.114
+server=/zhpharm-sh.com/114.114.114.114
 server=/zhqyue.com/114.114.114.114
 server=/zhrczp.com/114.114.114.114
 server=/zhrtc.com/114.114.114.114
