accelerated-domains: add kaken-china.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51745,6 +51745,7 @@ server=/kakashuzi.net/114.114.114.114
 server=/kakatx.com/114.114.114.114
 server=/kakayigui.com/114.114.114.114
 server=/kakayuy.net/114.114.114.114
+server=/kaken-china.com/114.114.114.114
 server=/kaku-scdn.com/114.114.114.114
 server=/kakucloud.com/114.114.114.114
 server=/kalading.com/114.114.114.114
