--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73575,6 +73575,7 @@ server=/sh-dongbiao.com/114.114.114.114
 server=/sh-eastwes.com/114.114.114.114
 server=/sh-edi.com/114.114.114.114
 server=/sh-eshow.com/114.114.114.114
+server=/sh-fangao.com/114.114.114.114
 server=/sh-fdtw.com/114.114.114.114
 server=/sh-fy.com/114.114.114.114
 server=/sh-game.com/114.114.114.114
