--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22813,6 +22813,7 @@ server=/coyuns.net/114.114.114.114
 server=/cp-keji.com/114.114.114.114
 server=/cp127w.com/114.114.114.114
 server=/cp365.org/114.114.114.114
+server=/cpa51.com/114.114.114.114
 server=/cpaatheatres.com/114.114.114.114
 server=/cpajia.com/114.114.114.114
 server=/cpakg.com/114.114.114.114
