--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41249,6 +41249,7 @@ server=/hippoanimation.com/114.114.114.114
 server=/hippter.com/114.114.114.114
 server=/hipu.com/114.114.114.114
 server=/hirata-cn.com/114.114.114.114
+server=/hirata-hts.com/114.114.114.114
 server=/hirede.com/114.114.114.114
 server=/hiregex.com/114.114.114.114
 server=/hiregistry.com/114.114.114.114
