--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72122,6 +72122,7 @@ server=/sanan-e.com/114.114.114.114
 server=/sananyiliao.com/114.114.114.114
 server=/sanbaiyun.com/114.114.114.114
 server=/sanbanggs.com/114.114.114.114
+server=/sanbangwt.com/114.114.114.114
 server=/sanbao0563.com/114.114.114.114
 server=/sancaiheast.com/114.114.114.114
 server=/sancanal.com/114.114.114.114
