--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75451,6 +75451,7 @@ server=/shxincn.com/114.114.114.114
 server=/shxjkjt.com/114.114.114.114
 server=/shxkyy.com/114.114.114.114
 server=/shxlkj.com/114.114.114.114
+server=/shxlpe.com/114.114.114.114
 server=/shxmbzcl.com/114.114.114.114
 server=/shxmhjs.com/114.114.114.114
 server=/shxnetwork.com/114.114.114.114
