accelerated-domains: add ssmept.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77408,6 +77408,7 @@ server=/ssmc-sz.com/114.114.114.114
 server=/ssmec.com/114.114.114.114
 server=/ssmedic.com/114.114.114.114
 server=/ssmeow.com/114.114.114.114
+server=/ssmept.com/114.114.114.114
 server=/ssmysh.com/114.114.114.114
 server=/ssnewyork.com/114.114.114.114
 server=/ssnm.xyz/114.114.114.114
