accelerated-domains: add xjh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91591,6 +91591,7 @@ server=/xjgkzs.com/114.114.114.114
 server=/xjgqt.org/114.114.114.114
 server=/xjgsdm.com/114.114.114.114
 server=/xjgwy.org/114.114.114.114
+server=/xjh.com/114.114.114.114
 server=/xjh.me/114.114.114.114
 server=/xjhgame.net/114.114.114.114
 server=/xjhjrq.com/114.114.114.114
