--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101163,6 +101163,7 @@ server=/zndsrom.com/114.114.114.114
 server=/zndstec.com/114.114.114.114
 server=/znelc.com/114.114.114.114
 server=/znfcwf.com/114.114.114.114
+server=/znfit.com/114.114.114.114
 server=/zngm.com/114.114.114.114
 server=/zngue.com/114.114.114.114
 server=/znhhmedical.com/114.114.114.114
