--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -4744,6 +4744,7 @@ server=/51cocoa.com/114.114.114.114
 server=/51code.com/114.114.114.114
 server=/51coma.com/114.114.114.114
 server=/51comp.com/114.114.114.114
+server=/51company.com/114.114.114.114
 server=/51cosmo.com/114.114.114.114
 server=/51cpm.com/114.114.114.114
 server=/51credit.com/114.114.114.114
