--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17662,6 +17662,7 @@ server=/ccbpension.com/114.114.114.114
 server=/ccbride.com/114.114.114.114
 server=/ccbtfs.com/114.114.114.114
 server=/ccbxt.com/114.114.114.114
+server=/ccc-ch.com/114.114.114.114
 server=/ccc-chn.com/114.114.114.114
 server=/cccamtop.com/114.114.114.114
 server=/cccareful.com/114.114.114.114
