accelerated-domains: add chaoschina.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18953,6 +18953,7 @@ server=/chaopaiyizu.com/114.114.114.114
 server=/chaoren.com/114.114.114.114
 server=/chaorenjiaoshi.com/114.114.114.114
 server=/chaorenxiu.com/114.114.114.114
+server=/chaoschina.com/114.114.114.114
 server=/chaosec.com/114.114.114.114
 server=/chaoshanren.com/114.114.114.114
 server=/chaoshen.cc/114.114.114.114
