--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35151,6 +35151,7 @@ server=/greatwallships.com/114.114.114.114
 server=/gree-jd.com/114.114.114.114
 server=/gree.com/114.114.114.114
 server=/greebox.com/114.114.114.114
+server=/green-sh.com/114.114.114.114
 server=/green-sz.com/114.114.114.114
 server=/green12306.com/114.114.114.114
 server=/greenchengjian.com/114.114.114.114
