accelerated-domains: add coinrobotics.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22497,6 +22497,7 @@ server=/coinall.ltd/114.114.114.114
 server=/coincsd.com/114.114.114.114
 server=/coinglass.com/114.114.114.114
 server=/coinnice.com/114.114.114.114
+server=/coinrobotics.com/114.114.114.114
 server=/coins-carnival.com/114.114.114.114
 server=/coinsky.com/114.114.114.114
 server=/coinvs.com/114.114.114.114
