--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64161,6 +64161,7 @@ server=/npc233.com/114.114.114.114
 server=/npcka.com/114.114.114.114
 server=/npfls.com/114.114.114.114
 server=/nphoto.net/114.114.114.114
+server=/npi-sh.com/114.114.114.114
 server=/npilasers.com/114.114.114.114
 server=/npjzjx.com/114.114.114.114
 server=/nplusgroup.com/114.114.114.114
