accelerated-domains: add challenge-design.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18796,6 +18796,7 @@ server=/chalangautozone.com/114.114.114.114
 server=/chalcochem.com/114.114.114.114
 server=/chalieco.com/114.114.114.114
 server=/challenge-21c.com/114.114.114.114
+server=/challenge-design.com/114.114.114.114
 server=/chalwin.com/114.114.114.114
 server=/chamcfae.com/114.114.114.114
 server=/chamei.com/114.114.114.114
