accelerated-domains: add bitzsoft.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14931,6 +14931,7 @@ server=/bitsde.com/114.114.114.114
 server=/bitse.com/114.114.114.114
 server=/bituq.com/114.114.114.114
 server=/bitvh.com/114.114.114.114
+server=/bitzsoft.com/114.114.114.114
 server=/biubiu.tv/114.114.114.114
 server=/biubiu001.com/114.114.114.114
 server=/biulie.com/114.114.114.114
