accelerated-domains: add guansong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35631,6 +35631,7 @@ server=/guanshanbaodian.com/114.114.114.114
 server=/guanshang1998.com/114.114.114.114
 server=/guanshangyu.cc/114.114.114.114
 server=/guanshenggz.com/114.114.114.114
+server=/guansong.com/114.114.114.114
 server=/guansre.com/114.114.114.114
 server=/guanting.com/114.114.114.114
 server=/guanvip8.com/114.114.114.114
