--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43546,6 +43546,7 @@ server=/huii.cc/114.114.114.114
 server=/huiidea.com/114.114.114.114
 server=/huiji.wiki/114.114.114.114
 server=/huijiame.com/114.114.114.114
+server=/huijian-land.com/114.114.114.114
 server=/huijiaoyun.com/114.114.114.114
 server=/huijidata.com/114.114.114.114
 server=/huijie.shop/114.114.114.114
