accelerated-domains: add saec.cc

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72009,6 +72009,7 @@ server=/sacdr.net/114.114.114.114
 server=/sact-digital.com/114.114.114.114
 server=/sae-china.org/114.114.114.114
 server=/saebbs.com/114.114.114.114
+server=/saec.cc/114.114.114.114
 server=/saegedu.com/114.114.114.114
 server=/saen.com/114.114.114.114
 server=/saf158.com/114.114.114.114
