accelerated-domains: add sanhe-medical.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72182,6 +72182,7 @@ server=/sangxuesheng.com/114.114.114.114
 server=/sanhao.com/114.114.114.114
 server=/sanhaoradio.com/114.114.114.114
 server=/sanhaostreet.com/114.114.114.114
+server=/sanhe-medical.com/114.114.114.114
 server=/sanhe-scale.com/114.114.114.114
 server=/sanhetimburly.com/114.114.114.114
 server=/sanheyongjia.com/114.114.114.114
