accelerated-domains: add sh-puwei.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73633,6 +73633,7 @@ server=/sh-printing.com/114.114.114.114
 server=/sh-prosperity.com/114.114.114.114
 server=/sh-prosun.com/114.114.114.114
 server=/sh-putai.com/114.114.114.114
+server=/sh-puwei.com/114.114.114.114
 server=/sh-real.com/114.114.114.114
 server=/sh-rfid.com/114.114.114.114
 server=/sh-ryjx.com/114.114.114.114
