--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74760,6 +74760,7 @@ server=/shjb600838.com/114.114.114.114
 server=/shjcm3d.com/114.114.114.114
 server=/shjdceo.com/114.114.114.114
 server=/shjdjx.com/114.114.114.114
+server=/shjglaser.com/114.114.114.114
 server=/shjgu.com/114.114.114.114
 server=/shjh120.com/114.114.114.114
 server=/shjhjc.com/114.114.114.114
