accelerated-domains: add shzksg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75553,6 +75553,7 @@ server=/shzjy.com/114.114.114.114
 server=/shzkb.com/114.114.114.114
 server=/shzkbc.com/114.114.114.114
 server=/shzkbj.com/114.114.114.114
+server=/shzksg.com/114.114.114.114
 server=/shzn-group.com/114.114.114.114
 server=/shzq.com/114.114.114.114
 server=/shzrx.com/114.114.114.114
