--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81514,6 +81514,7 @@ server=/tmetb.net/114.114.114.114
 server=/tmhkgs.com/114.114.114.114
 server=/tmhong.com/114.114.114.114
 server=/tmhttc.com/114.114.114.114
+server=/tmirob.com/114.114.114.114
 server=/tmisp.com/114.114.114.114
 server=/tmjbee.com/114.114.114.114
 server=/tmjd123.com/114.114.114.114
