accelerated-domains: add xiongf.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91373,6 +91373,7 @@ server=/xiongbingtianxia.com/114.114.114.114
 server=/xiongchuan.com/114.114.114.114
 server=/xiongdacn.com/114.114.114.114
 server=/xiongdong.com/114.114.114.114
+server=/xiongf.com/114.114.114.114
 server=/xiongfengcl.com/114.114.114.114
 server=/xiongge.club/114.114.114.114
 server=/xiongmao555.com/114.114.114.114
