accelerated-domains: add sh-sed.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73637,6 +73637,7 @@ server=/sh-puwei.com/114.114.114.114
 server=/sh-real.com/114.114.114.114
 server=/sh-rfid.com/114.114.114.114
 server=/sh-ryjx.com/114.114.114.114
+server=/sh-sed.com/114.114.114.114
 server=/sh-service.com/114.114.114.114
 server=/sh-sfc.com/114.114.114.114
 server=/sh-shenming.com/114.114.114.114
