accelerated-domains: add unisiot.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83745,6 +83745,7 @@ server=/unisedu.com/114.114.114.114
 server=/unisemicon.com/114.114.114.114
 server=/unisguard.com/114.114.114.114
 server=/unishy.com/114.114.114.114
+server=/unisiot.com/114.114.114.114
 server=/unisoc.com/114.114.114.114
 server=/unisonal.com/114.114.114.114
 server=/unisound.com/114.114.114.114
