--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28876,6 +28876,7 @@ server=/efang.tv/114.114.114.114
 server=/efangcdn.com/114.114.114.114
 server=/efangwang.com/114.114.114.114
 server=/efapiao.com/114.114.114.114
+server=/efasco.com/114.114.114.114
 server=/efashionchina.com/114.114.114.114
 server=/efashioncloud.com/114.114.114.114
 server=/efchina.org/114.114.114.114
