--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38681,6 +38681,7 @@ server=/h0fmfp3.xyz/114.114.114.114
 server=/h12.net/114.114.114.114
 server=/h128.com/114.114.114.114
 server=/h13.mobi/114.114.114.114
+server=/h2fc.net/114.114.114.114
 server=/h2gl.com/114.114.114.114
 server=/h2o-china.com/114.114.114.114
 server=/h2os.com/114.114.114.114
