accelerated-domains: add shkdchem.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74791,6 +74791,7 @@ server=/shjzzjf.net/114.114.114.114
 server=/shkaihang.com/114.114.114.114
 server=/shkamoer.com/114.114.114.114
 server=/shkcn.com/114.114.114.114
+server=/shkdchem.com/114.114.114.114
 server=/shkdfua.com/114.114.114.114
 server=/shkewen.com/114.114.114.114
 server=/shkg.net/114.114.114.114
