accelerated-domains: add 95jizhang.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -8463,6 +8463,7 @@ server=/95epay.com/114.114.114.114
 server=/95fenapp.com/114.114.114.114
 server=/95ib.com/114.114.114.114
 server=/95ip.com/114.114.114.114
+server=/95jizhang.com/114.114.114.114
 server=/95k.com/114.114.114.114
 server=/95links.com/114.114.114.114
 server=/95ns.net/114.114.114.114
