--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12010,6 +12010,7 @@ server=/ashvsash.net/114.114.114.114
 server=/asi-midea.com/114.114.114.114
 server=/asia-cdn.com/114.114.114.114
 server=/asia-dns.com/114.114.114.114
+server=/asia-sh.com/114.114.114.114
 server=/asiabt.com/114.114.114.114
 server=/asiaci.com/114.114.114.114
 server=/asiacool.com/114.114.114.114
