accelerated-domains: add bestwaysh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14223,6 +14223,7 @@ server=/bestvist.com/114.114.114.114
 server=/bestwa.com/114.114.114.114
 server=/bestwatch.cc/114.114.114.114
 server=/bestwatchaaa.com/114.114.114.114
+server=/bestwaysh.com/114.114.114.114
 server=/bestwehotel.com/114.114.114.114
 server=/bestweshop.com/114.114.114.114
 server=/bestwesternfelicityshenzhen.com/114.114.114.114
