accelerated-domains: add fankuweb.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30416,6 +30416,7 @@ server=/fanjinyan.com/114.114.114.114
 server=/fanjunyang.zone/114.114.114.114
 server=/fankebang.com/114.114.114.114
 server=/fankhome.com/114.114.114.114
+server=/fankuweb.com/114.114.114.114
 server=/fanli.com/114.114.114.114
 server=/fanli001.net/114.114.114.114
 server=/fanlibei.com/114.114.114.114
