--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67208,6 +67208,7 @@ server=/powerlaw.ai/114.114.114.114
 server=/powerleadercdn.com/114.114.114.114
 server=/powerleaderidc.com/114.114.114.114
 server=/powerliber.com/114.114.114.114
+server=/powermaxcorp.com/114.114.114.114
 server=/powerskystudio.com/114.114.114.114
 server=/powerstationofart.com/114.114.114.114
 server=/powertensors.ai/114.114.114.114
