--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68396,6 +68396,7 @@ server=/qianmi.com/114.114.114.114
 server=/qianmingyun.com/114.114.114.114
 server=/qianmiyun.com/114.114.114.114
 server=/qianmoqi.com/114.114.114.114
+server=/qianmoufirm.com/114.114.114.114
 server=/qianmu.org/114.114.114.114
 server=/qianniu.com/114.114.114.114
 server=/qianp.com/114.114.114.114
