--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73299,6 +73299,7 @@ server=/semiinsights.com/114.114.114.114
 server=/semiway.com/114.114.114.114
 server=/sempk.com/114.114.114.114
 server=/semptian.com/114.114.114.114
+server=/semw-sh.com/114.114.114.114
 server=/senaobz.cc/114.114.114.114
 server=/senaocargo.com/114.114.114.114
 server=/senbeijia.com/114.114.114.114
