--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74132,6 +74132,7 @@ server=/shcsdq.com/114.114.114.114
 server=/shcso.com/114.114.114.114
 server=/shcstheatre.com/114.114.114.114
 server=/shcwmotor.com/114.114.114.114
+server=/shcya.com/114.114.114.114
 server=/shcz.com/114.114.114.114
 server=/shczssyq.com/114.114.114.114
 server=/shczyy.com/114.114.114.114
