--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74482,6 +74482,7 @@ server=/shhbgm.com/114.114.114.114
 server=/shhcpm.com/114.114.114.114
 server=/shhd17.com/114.114.114.114
 server=/shhdouyue.com/114.114.114.114
+server=/shhebio.com/114.114.114.114
 server=/shhenghesh.com/114.114.114.114
 server=/shheywow.com/114.114.114.114
 server=/shhgzf.com/114.114.114.114
