--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76470,6 +76470,7 @@ server=/smhsw.com/114.114.114.114
 server=/smhyplay.com/114.114.114.114
 server=/smianet.com/114.114.114.114
 server=/smic-sh.com/114.114.114.114
+server=/smicc.com/114.114.114.114
 server=/smicrobe.com/114.114.114.114
 server=/smics.com/114.114.114.114
 server=/smil888.com/114.114.114.114
