--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22791,6 +22791,7 @@ server=/cosplay8.com/114.114.114.114
 server=/cosplayla.com/114.114.114.114
 server=/cosyjoy.com/114.114.114.114
 server=/cosz.com/114.114.114.114
+server=/cotong.com/114.114.114.114
 server=/cotticoffee.com/114.114.114.114
 server=/cotv.tv/114.114.114.114
 server=/couas.com/114.114.114.114
