--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21157,6 +21157,7 @@ server=/cliim.com/114.114.114.114
 server=/cliim.net/114.114.114.114
 server=/clijc.com/114.114.114.114
 server=/climedic.com/114.114.114.114
+server=/clinbrain.com/114.114.114.114
 server=/clinicalmall.com/114.114.114.114
 server=/clj178.com/114.114.114.114
 server=/cljtscd.com/114.114.114.114
