--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71132,6 +71132,7 @@ server=/rishiqing.com/114.114.114.114
 server=/rishuncn.com/114.114.114.114
 server=/rising-eo.com/114.114.114.114
 server=/risingpenny.com/114.114.114.114
+server=/riskbird.com/114.114.114.114
 server=/riskivy.com/114.114.114.114
 server=/risuiwd.com/114.114.114.114
 server=/risun.com/114.114.114.114
