--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77128,6 +77128,7 @@ server=/sowu.com/114.114.114.114
 server=/soxsok.com/114.114.114.114
 server=/soyim.com/114.114.114.114
 server=/soyiyuan.com/114.114.114.114
+server=/soyjg.com/114.114.114.114
 server=/soyohui.com/114.114.114.114
 server=/soyoung.com/114.114.114.114
 server=/soyouso.com/114.114.114.114
