accelerated-domains: add tecochina.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80271,6 +80271,7 @@ server=/techwin.com/114.114.114.114
 server=/techxue.com/114.114.114.114
 server=/teclast.com/114.114.114.114
 server=/tecmz.com/114.114.114.114
+server=/tecochina.net/114.114.114.114
 server=/tecolighting.com/114.114.114.114
 server=/tecompharma.com/114.114.114.114
 server=/tecreal.com/114.114.114.114
