--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74165,6 +74165,7 @@ server=/shdxgraphene.com/114.114.114.114
 server=/shdy168.com/114.114.114.114
 server=/shdyiy.com/114.114.114.114
 server=/shdyty.com/114.114.114.114
+server=/shdzep.com/114.114.114.114
 server=/shdzfp.com/114.114.114.114
 server=/sheasyoffice.com/114.114.114.114
 server=/shebao.net/114.114.114.114
