accelerated-domains: add paper-translation.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65927,6 +65927,7 @@ server=/papajohnshanghai.com/114.114.114.114
 server=/papapa.tv/114.114.114.114
 server=/papatya.store/114.114.114.114
 server=/papegames.com/114.114.114.114
+server=/paper-translation.com/114.114.114.114
 server=/paper.tv/114.114.114.114
 server=/paper027.com/114.114.114.114
 server=/paper120.net/114.114.114.114
