accelerated-domains: add sh-hwbaoan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73620,6 +73620,7 @@ server=/sh-holfer.com/114.114.114.114
 server=/sh-holiday.com/114.114.114.114
 server=/sh-hting.com/114.114.114.114
 server=/sh-huayang.com/114.114.114.114
+server=/sh-hwbaoan.com/114.114.114.114
 server=/sh-hywin.com/114.114.114.114
 server=/sh-impact.com/114.114.114.114
 server=/sh-italent.com/114.114.114.114
