accelerated-domains: add yuebeist.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96994,6 +96994,7 @@ server=/yuebai.tv/114.114.114.114
 server=/yueban.net/114.114.114.114
 server=/yuebao.ltd/114.114.114.114
 server=/yuebei.vip/114.114.114.114
+server=/yuebeist.com/114.114.114.114
 server=/yuebie.com/114.114.114.114
 server=/yueblx.com/114.114.114.114
 server=/yuebooemt.com/114.114.114.114
