accelerated-domains: add shanghaiqilu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73841,6 +73841,7 @@ server=/shanghaiparker.com/114.114.114.114
 server=/shanghaipower.com/114.114.114.114
 server=/shanghaipuying.com/114.114.114.114
 server=/shanghaiqihu.com/114.114.114.114
+server=/shanghaiqilu.com/114.114.114.114
 server=/shanghaiql.org/114.114.114.114
 server=/shanghairanking.com/114.114.114.114
 server=/shanghairc.com/114.114.114.114
