accelerated-domains: add fortune-co.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31858,6 +31858,7 @@ server=/forsou.com/114.114.114.114
 server=/forthxu.com/114.114.114.114
 server=/fortiortech.com/114.114.114.114
 server=/fortrustpower.com/114.114.114.114
+server=/fortune-co.com/114.114.114.114
 server=/fortunebs.net/114.114.114.114
 server=/fortunepdc.com/114.114.114.114
 server=/fortunevc.com/114.114.114.114
