--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88793,6 +88793,7 @@ server=/wuxiaodi.com/114.114.114.114
 server=/wuxiatools.com/114.114.114.114
 server=/wuxibus.com/114.114.114.114
 server=/wuxicxl.com/114.114.114.114
+server=/wuxidiagnostics.com/114.114.114.114
 server=/wuxihospital.com/114.114.114.114
 server=/wuxihqyy.com/114.114.114.114
 server=/wuxijia.com/114.114.114.114
