accelerated-domains: add shlayout.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74828,6 +74828,7 @@ server=/shl56.com/114.114.114.114
 server=/shlab.tech/114.114.114.114
 server=/shlangao.com/114.114.114.114
 server=/shlawserve.com/114.114.114.114
+server=/shlayout.com/114.114.114.114
 server=/shlcxby.com/114.114.114.114
 server=/shld.com/114.114.114.114
 server=/shldfm.com/114.114.114.114
