accelerated-domains: add cndmaterial.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21777,6 +21777,7 @@ server=/cndids.com/114.114.114.114
 server=/cndingxi.com/114.114.114.114
 server=/cndl.vip/114.114.114.114
 server=/cndledu.com/114.114.114.114
+server=/cndmaterial.com/114.114.114.114
 server=/cndns.com/114.114.114.114
 server=/cndns5.com/114.114.114.114
 server=/cndog.net/114.114.114.114
